Add photo and age to public developer photo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,9 @@ main {
     background-color: #838383;
 }
 
-.desired-salary, .desired-work-type {
+.desired-salary,
+.desired-work-type,
+.developer-age {
     font-size: 20px;
     display: block;
     font-weight: 600;
